# cardito

./: .gitignore  Cargo.toml  license.md  readme.md
src/: build_config.rs  dimensions.rs  imports.rs  main.rs  spread.rs  template_set.rs  templates.rs
src/text/: basic.ito  dummy_cards.crd  keywords.md
test_data/: cards.crd  main.ito
